tasks/APUGATEWAY: Fix sonar